# ease-hs

./: .cursorignore  .gitignore  README.md  data_models.py  db.py  floorplan_routes.py  guide.md  hello.py  main.py  pyproject.toml  reference-code.md  requirements.txt  s3.py  test.ipynb
data/: k.json
src/: authentication.py  db.py  element_routes.py  floorplan.py  s3.py  utils.py
src/components/: element_modals.py
static/: drawing.js
static/css/: floorplanner.css
static/js/: actions.js  api.js  config.js  dom-references.js  drawing.js  editor.js  engine.js  event-handlers.js  floorplanner.js  func.js  geometry.js  main.js  qSVG.js  state.js
static/js/floorplanner/: core.js  elements.js  render.js  show.js  ui.js
